Enhance project configuration and security features
- Updated .gitignore to include environment files, test coverage, and Node/React build artifacts.
- Added Spring Boot API Gateway and microservice configurations in docker-compose.yml.
- Integrated JWT authentication with Auth0 in the StudentController and StudentService, allowing for user identification through JWT tokens.
- Implemented data validation for student enrollment dates and CPF format in StudentService.
- Configured CORS settings and OAuth2 resource server in application.yml for improved security and cross-origin requests.

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,38 @@ Thumbs.db
 
 ADVANCED_MODEL_IMPROVEMENTS.md
 REFACTORING_SUMMARY.md
+
+# --- Added: Environment files ---
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# --- Added: Spring Boot local overrides and PID ---
+application-local.properties
+application-local.yml
+*.pid
+
+# --- Added: Test/Coverage ---
+/.jacoco/
+jacoco.exec
+/coverage/
+/test-results/
+
+# --- Added: Node/React (Vite) ---
+node_modules/
+/dist/
+/.cache/
+/.vite/
+.vite/
+*.tsbuildinfo
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.eslintcache
+
+# --- Added: Docker/Kubernetes ---
+/docker-compose.override.yml
+/.kube/
