--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -104,6 +104,105 @@ services:
     networks:
       - distrischool-network
 
+  # Spring Cloud Gateway - API Gateway Service
+  api-gateway-dev:
+    image: distrischooldevacr.azurecr.io/api-gateway:latest
+    container_name: api-gateway-dev
+    ports:
+      - "8080:8080"
+    environment:
+      SERVER_PORT: 8080
+      SPRING_PROFILES_ACTIVE: dev
+      # Redis para Rate Limiter
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
+      SPRING_REDIS_PASSWORD: ""
+      # CORS global no gateway (origens front-end locais)
+      SPRING_CLOUD_GATEWAY_GLOBAL_CORS_CORS_CONFIGURATIONS____ALLOWED_ORIGINS: "http://localhost:3000,http://localhost:5173"
+      SPRING_CLOUD_GATEWAY_GLOBAL_CORS_CORS_CONFIGURATIONS____ALLOWED_METHODS: "GET,POST,PUT,DELETE,OPTIONS,PATCH"
+      SPRING_CLOUD_GATEWAY_GLOBAL_CORS_CORS_CONFIGURATIONS____ALLOWED_HEADERS: "*"
+      SPRING_CLOUD_GATEWAY_GLOBAL_CORS_CORS_CONFIGURATIONS____ALLOW_CREDENTIALS: "true"
+      SPRING_CLOUD_GATEWAY_GLOBAL_CORS_CORS_CONFIGURATIONS____MAX_AGE: "3600"
+      # Rotas
+      SPRING_CLOUD_GATEWAY_ROUTES_0_ID: auth-service
+      SPRING_CLOUD_GATEWAY_ROUTES_0_URI: http://microservice-auth-dev:8080
+      SPRING_CLOUD_GATEWAY_ROUTES_0_PREDICATES_0: Path=/api/v1/auth/**
+      SPRING_CLOUD_GATEWAY_ROUTES_0_FILTERS_0: RemoveRequestHeader=Origin
+      SPRING_CLOUD_GATEWAY_ROUTES_0_FILTERS_1: RemoveRequestHeader=Referer
+      SPRING_CLOUD_GATEWAY_ROUTES_1_ID: users-service
+      SPRING_CLOUD_GATEWAY_ROUTES_1_URI: http://microservice-auth-dev:8080
+      SPRING_CLOUD_GATEWAY_ROUTES_1_PREDICATES_0: Path=/api/v1/users/**
+      SPRING_CLOUD_GATEWAY_ROUTES_1_FILTERS_0: RemoveRequestHeader=Origin
+      SPRING_CLOUD_GATEWAY_ROUTES_1_FILTERS_1: RemoveRequestHeader=Referer
+      SPRING_CLOUD_GATEWAY_ROUTES_2_ID: student-service
+      SPRING_CLOUD_GATEWAY_ROUTES_2_URI: http://student-management-service-dev:8080
+      SPRING_CLOUD_GATEWAY_ROUTES_2_PREDICATES_0: Path=/api/v1/students/**
+      SPRING_CLOUD_GATEWAY_ROUTES_2_FILTERS_0: RemoveRequestHeader=Origin
+      SPRING_CLOUD_GATEWAY_ROUTES_2_FILTERS_1: RemoveRequestHeader=Referer
+    networks:
+      - distrischool-network
+    depends_on:
+      redis:
+        condition: service_healthy
+      microservice-auth-dev:
+        condition: service_started
+      student-management-service-dev:
+        condition: service_started
+
+  # Microserviço Auth - usando imagem do Azure Container Registry (ACR)
+  microservice-auth-dev:
+    image: distrischooldevacr.azurecr.io/microservice-auth:latest
+    container_name: microservice-auth-dev
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
+    ports:
+      - "8081:8080"
+      - "5006:5005"   # Debug remoto
+      - "35730:35729" # LiveReload
+    environment:
+      SERVER_PORT: 8080
+      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      SPRING_PROFILES_ACTIVE: dev
+      SPRING_DEVTOOLS_RESTART_ENABLED: "true"
+      SPRING_DEVTOOLS_LIVERELOAD_ENABLED: "true"
+      SPRING_DEVTOOLS_RESTART_POLL_INTERVAL: "1000"
+      SPRING_DEVTOOLS_RESTART_QUIET_PERIOD: "400"
+      # Banco de dados: reutiliza o DB existente para desenvolvimento
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/distrischool_auth
+      SPRING_DATASOURCE_USERNAME: distrischool
+      SPRING_DATASOURCE_PASSWORD: distrischool123
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      # Redis
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
+      SPRING_REDIS_PASSWORD: ""
+      # Flyway/JPA
+      SPRING_FLYWAY_ENABLED: "false"
+      SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
+      SPRING_JPA_SHOW_SQL: "false"
+      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: "true"
+      # CORS (dev)
+      SPRING_WEB_CORS_ALLOWED_ORIGINS: "http://localhost:8080,http://localhost:3000,http://localhost:5173"
+      SPRING_WEB_CORS_ALLOWED_METHODS: "GET,POST,PUT,DELETE,OPTIONS,PATCH,HEAD"
+      SPRING_WEB_CORS_ALLOWED_HEADERS: "*"
+      SPRING_WEB_CORS_ALLOW_CREDENTIALS: "true"
+      SPRING_WEB_CORS_MAX_AGE: "3600"
+      SPRING_WEB_CORS_ENABLED: "true"
+      # Auth0 (necessário para inicializar o serviço)
+      AUTH0_ENABLED: "true"
+      AUTH0_DOMAIN: ${AUTH0_DOMAIN}
+      AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
+      AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
+      AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
+      AUTH0_CONNECTION: ${AUTH0_CONNECTION:-Username-Password-Authentication}
+    networks:
+      - distrischool-network
+
   # Microserviço Template - Ambiente de Desenvolvimento com Hot Reloading
   student-management-service-dev:
     build:
@@ -119,13 +218,18 @@ services:
       kafka:
         condition: service_healthy
     ports:
-      - "8080:8080"
+      - "8082:8080"
       - "5005:5005"   # Porta para debug remoto
       - "35729:35729" # Porta para LiveReload
+    env_file:
+      - .env
     environment:
       SERVER_PORT: 8080
       KAFKA_BOOTSTRAP_SERVERS: kafka:29092
       SPRING_PROFILES_ACTIVE: dev
+      SECURITY_DISABLE: "false"
+      AUTH0_DOMAIN: dev-lthr3fyfn4x47q1g.us.auth0.com
+      AUTH0_AUDIENCE: https://api.distrischool.com
       SPRING_DEVTOOLS_RESTART_ENABLED: "true"
       SPRING_DEVTOOLS_LIVERELOAD_ENABLED: "true"
       SPRING_DEVTOOLS_RESTART_POLL_INTERVAL: "1000"
