--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,6 +68,13 @@ spring:
       acks: all
       retries: 3
 
+  # Segurança - OAuth2 Resource Server (Auth0)
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${AUTH0_ISSUER_URI:https://${AUTH0_DOMAIN:your-tenant.auth0.com}/}
+
   # Configuração do Jackson
   jackson:
     default-property-inclusion: non_null
@@ -87,9 +94,21 @@ spring:
       restart:
         enabled: true
 
+  # Configuração de CORS
+  web:
+    cors:
+      allowed-origins: ${SPRING_WEB_CORS_ALLOWED_ORIGINS:http://192.168.1.7:8080,http://192.168.1.7:3000,http://192.168.1.7:5173,http://localhost:8080,http://localhost:3000,http://localhost:5173}
+      allowed-methods: ${SPRING_WEB_CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS,PATCH}
+      allowed-headers: ${SPRING_WEB_CORS_ALLOWED_HEADERS:*}
+      allow-credentials: ${SPRING_WEB_CORS_ALLOW_CREDENTIALS:true}
+
 server:
   port: ${SERVER_PORT:8080}
   shutdown: graceful
+
+# Auth0 - configuração adicional
+auth0:
+  audience: ${AUTH0_AUDIENCE:https://distrischool.api}
 
 # Configurações do Actuator
 management:
@@ -152,3 +171,5 @@ microservice:
       student-updated: distrischool.student.updated
       student-deleted: distrischool.student.deleted
       student-status-changed: distrischool.student.status.changed
+
+ 
