Refactor project configuration and enhance student management features
- Updated docker-compose.yml to change PostgreSQL port mapping from 5432 to 5435.
- Added Testcontainers dependencies in pom.xml for integration testing.
- Modified RedisConfig to conditionally enable caching based on RedisConnectionFactory presence.
- Updated SecurityConfig to provide default values for issuer-uri and audience properties.
- Enhanced StudentController to enforce ADMIN role requirement for student creation.
- Updated StudentRequestDTO to clarify registration number handling.
- Added auth0Id field in Student entity for user authentication linkage.
- Improved student search query in StudentRepository to handle empty string cases.
- Implemented user creation in AuthService within StudentService and added role verification for ADMIN.
- Updated application.yml and application-test.yml for integration testing configurations.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <lombok.version>1.18.30</lombok.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -141,6 +142,23 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Testcontainers for integration tests -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Security: Protect endpoints with JWT (Auth0) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -162,6 +180,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
