--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,16 +1,58 @@
-# Configurações para testes
+# Configurações para testes de integração
 spring:
   application:
-    name: microservice-template-test
+    name: student-management-service-test
   
+  # Database configuration will be overridden by Testcontainers
+  datasource:
+    url: jdbc:postgresql://localhost:5432/test_students
+    username: test
+    password: test
+    driver-class-name: org.postgresql.Driver
+  
+  # JPA configuration for tests
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+  
+  # Flyway - disable for tests if using JPA auto-update
+  flyway:
+    enabled: false
+  
+  # Redis - disable cache for tests
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  cache:
+    type: none
+  
+  # Kafka - use embedded Kafka for tests
   kafka:
-    bootstrap-servers: ${spring.embedded.kafka.brokers}
+    bootstrap-servers: ${spring.embedded.kafka.brokers:localhost:9092}
+  
+  # Security - disable for integration tests
   
   autoconfigure:
     exclude:
       - org.springframework.cloud.netflix.eureka.EurekaClientAutoConfiguration
+      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
 
+# Disable security for integration tests
+security:
+  disable: true
+
+# Logging
 logging:
   level:
     com.distrischool: DEBUG
+    org.springframework: INFO
+    org.hibernate: INFO
+    org.testcontainers: INFO
 
