Enhance SecurityConfig to support dynamic issuer URI construction
- Added support for AUTH0_DOMAIN and AUTH0_ISSUER_URI to dynamically construct the issuer URI for JWT validation.
- Updated getIssuerUri method to prioritize environment variables and provide fallback options.
- Enhanced logging for issuer URI configuration in the JWT decoder setup.
- Updated application.yml with comments on issuer URI configuration for better clarity.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,6 +69,9 @@ spring:
       retries: 3
 
   # Segurança - OAuth2 Resource Server (Auth0)
+  # O issuer-uri será construído automaticamente pelo SecurityConfig a partir de AUTH0_DOMAIN ou AUTH0_ISSUER_URI
+  # AUTH0_DOMAIN deve ser algo como: dev-lthr3fyfn4x47q1g.us.auth0.com
+  # AUTH0_ISSUER_URI deve ser algo como: https://dev-lthr3fyfn4x47q1g.us.auth0.com/
   security:
     oauth2:
       resourceserver:
