feat: enhance Redis caching configuration and update docker-compose for Redis dependency
- Added Redis service dependency in docker-compose.yml to ensure service health checks.
- Updated RedisConfig to customize ObjectMapper for Java 8 Time API support and improved cache management.
- Enhanced GlobalExceptionHandler to handle AccessDeniedException and SerializationException with appropriate responses.
- Modified application.yml to configure Redis cache settings, including time-to-live for cache entries.
- Removed outdated Postman collection file to streamline project resources.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -215,6 +215,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - "8082:8080"
       - "5005:5005"   # Porta para debug remoto
